fixed a nasty overflow issue in html sections

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -113,6 +113,7 @@ body {
   font-weight: var(--font-normal);
   color: var(--text-color);
   background-color: var(--container-color-alt2);
+  position: relative;
 }
 
 h1 { font-size: var(--h1-font-size);}
@@ -206,8 +207,6 @@ iframe {
   }
 }
 @media (min-width: 576px) {
-  .xs--padded { }
-
   .content__frame {
     padding-left: 0;
     padding-right: 0;
@@ -237,11 +236,12 @@ iframe {
   font-weight: var(--font-semi-bold);
   border: none;
   outline: none;
+  margin: none;
   background-color: rgba(139,65,54,0.5);
   color: var(--text-color-light);
   cursor: pointer;
   padding: .128rem .7rem;
-  border-radius: 6px;
+  border-radius: 4px;
 }
 
 #btnBackToTop:hover {
@@ -658,16 +658,20 @@ iframe {
   background-color: var(--theme-color);
 }
 
+/* 
 .typewriter p {
-  /* trigger only on -sm screensize above */
-}
+  trigger only on -sm screensize above
+} 
+*/
 
+/* 
 .typewriter.run--animation p {
-  /* visibility: visible;
+  visibility: visible;
   animation: 
     typing 2.4s steps(40, end),
-    blink-caret .75s step-end infinite; */
-}
+    blink-caret .75s step-end infinite;
+} 
+*/
 
 /* The typing effect */
 @keyframes typing {
@@ -678,16 +682,16 @@ iframe {
 /* The typewriter cursor effect */
 @keyframes blink-caret {
   from, to { border-color: transparent }
-  50% { border-color: orange; }
+  50% { border-color: var(--theme-color); }
 }
 
 @media (min-width: 576px) {
   .typewriter p {
     overflow: hidden; /* Ensures the content is not revealed until the animation */
-    border-right: .15em solid orange; /* The typwriter cursor */
+    border-right: .15em solid var(--theme-color); /* The typwriter cursor */
     white-space: nowrap; /* Keeps the content on a single line */
     margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-    letter-spacing: .10em;
+    letter-spacing: .15em;
     visibility: hidden;
   }
   .typewriter.run--animation p {
